Closed
Bug 1281499
Opened 9 years ago
Closed 9 years ago
widget/nsTransferable.cpp:186:17: error: 'MakeUnique' was not declared in this scope
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(firefox50 fixed)
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: gerard-majax, Assigned: gerard-majax)
References
Details
(Whiteboard: fixed-in-pine)
Attachments
(1 file)
building for z3c kk
| Assignee | ||
Comment 1•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/60266/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/60266/
Attachment #8764300 -
Flags: review?(mstange)
| Assignee | ||
Updated•9 years ago
|
Attachment #8764300 -
Flags: review?(mstange)
| Assignee | ||
Comment 2•9 years ago
|
||
Comment on attachment 8764300 [details]
Bug 1281499 - Add missing include and namespace for MakeUnique<>
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/60266/diff/1-2/
Attachment #8764300 -
Attachment description: Bug 1281499 - Add missing include for MakeUnique<> → Bug 1281499 - Add missing include and namespace for MakeUnique<>
Attachment #8764300 -
Flags: review?(mstange)
Comment 3•9 years ago
|
||
Comment on attachment 8764300 [details]
Bug 1281499 - Add missing include and namespace for MakeUnique<>
https://reviewboard.mozilla.org/r/60266/#review57136
Attachment #8764300 -
Flags: review?(mstange) → review+
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → lissyx+mozillians
| Assignee | ||
Comment 4•9 years ago
|
||
Whiteboard: fixed-in-pine
Pushed by alissy@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/65542739603b
Add missing include and namespace for MakeUnique<> r=mstange
Comment 7•9 years ago
|
||
| bugherder | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•