Bug 1281499 - Add missing include and namespace for MakeUnique<> r=mstange

MozReview-Commit-ID: DpBZrnx47g8

--HG--
extra : rebase_source : d0acf2ae074020fc8b1ffc1d51f80058b7f92c99